fix background z-index

--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -31,6 +31,10 @@ body {
   opacity: 1;
 } */
 
+.main-background-component {
+  z-index: -999;
+}
+
 li {
   list-style: none;
 }
